# dsm-viz

./: .gitignore  README.md  main.py  pyproject.toml
client/: .env  CMakeLists.txt  Makefile  client.cpp  client.py  requirements.txt
server/: .env  chi-square.js  requirements.txt  server.py
server/docs/: DSM-GUI 설계.pptx
server/simulator/: Makefile  dptm_tls_mon.h  libcup_dump.c  mavlink_print.c  mon_cli  mon_cli.c  mon_print.c  mon_print.h  record_dsm_ex_client_20250815a.dump  record_dsm_ex_server_20250815a.dump  record_dsm_st_client_20250817a.dump  record_dsm_st_server_20250817a.dump  sim_mon_srv  sim_mon_srv.c
